Removing unnecessary comments and updating response message when the service emits a bad request