@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TeamSelectionService {
@@ -24,14 +23,12 @@ public class TeamSelectionService {
     public ResponseEntity<?> calculateStartingTeam(TeamSelectionCriteria criteria) {
         List<Player> players = playerRepository.findAll();
 
-        // Filtrar jugadores que tienen al menos 3 registros de estadísticas
         List<Player> eligiblePlayers = players.stream()
                 .filter(player -> player.getStatsList() != null && player.getStatsList().size() >= 3)
-                .collect(Collectors.toList());
+                .toList();
 
-        // Verificar si hay suficientes jugadores con los datos requeridos
         if (eligiblePlayers.size() < criteria.getTeamSize()) {
-            return ResponseEntity.badRequest().body("No hay suficientes jugadores con al menos 3 registros de estadísticas");
+            return ResponseEntity.badRequest().body("There is not enough information.");
         }
 
         List<PlayerScore> playerScores = eligiblePlayers.stream()
@@ -39,7 +36,7 @@ public class TeamSelectionService {
                         player.calculateTotalScore(player.getStatsList(), criteria.getPowerPercentage(), criteria.getSpeedPercentage(), criteria.getPassesPercentage())))
                 .sorted(Comparator.comparingInt(PlayerScore::getScore).reversed())
                 .limit(criteria.getTeamSize())
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(playerScores);
     }
